Création des pages correspondant aux routes, des liens dans le menu, des différents layouts. Création de la première requete et utilisation du DQL pour le reste.

--- a/src/Game/CardBundle/Resources/config/routing.yml
+++ b/src/Game/CardBundle/Resources/config/routing.yml
@@ -13,3 +13,7 @@ game_card_team:
 game_card_game:
     path:     /game/
     defaults: { _controller: GameCardBundle:Game:index }
+
+game_card_rule:
+    path:     /rule/
+    defaults: { _controller: GameCardBundle:Default:rule }
