mise en place des premières requetes, sur la page des joueurs et des équipes

--- a/src/Game/CardBundle/Resources/config/routing.yml
+++ b/src/Game/CardBundle/Resources/config/routing.yml
@@ -6,9 +6,21 @@ game_card_player:
     path:     /player/
     defaults: { _controller: GameCardBundle:Player:index }
 
+game_card_player_show:
+    path:     /player/show/{id}
+    defaults: { _controller: GameCardBundle:Player:show }
+    requirements:
+        id: \d+
+
 game_card_team:
     path:     /team/
     defaults: { _controller: GameCardBundle:Team:index }
+
+game_card_team_show:
+    path:     /team/show/{id}
+    defaults: { _controller: GameCardBundle:Team:show }
+    requirements:
+        id: \d+
 
 game_card_game:
     path:     /game/
