--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 /web/bundles/
 /app/bootstrap.php.cache
 /app/cache/*
+!app/cache/.gitkeep
 /app/config/parameters.yml
 /app/logs/*
+!app/logs/.gitkeep
+
 /build/
 /vendor/
 /bin/
 /composer.phar
+
 .idea
+*.sublime-project
+*.sublime-workspace
+
+*.php~
